# Archiver

./: Cargo.toml  bitbuffer.rs  lz_77.rs  main.rs
src/: archive.rs  huffman.rs  lz77.rs  lz_77.rs  main.rs  suffix_array.rs  terminal_interface.rs
