[package]
name = "tmy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }  
bincode = "1.3.3"
rayon = "1.10.0"
suffix_array = "0.5.0"
indicatif = {version = "0.17.8", features = ["rayon"]}
priority-queue = "2.0.3"
clap = {version = "4.5.7 ", features = ["derive"]}